# geekhunter_backend

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
backend/: scheduler.py
backend/backend/: settings.py  tools.py  urls.py
backend/client_api_app/: apps.py  model_managers.py  models.py  serializers.py  urls.py  urls_user.py  views.py  views_user.py
backend/parser/: analyzer.py  base_parser.py  hh_parser.py  schema.py  test_parsers.py
